--- a/page-2.html
+++ b/page-2.html
@@ -45,6 +45,11 @@
                     var Southampton = [];
                     var Cherburgo = [];
                     var Queenstown = [];
+                    
+                    var Southmuertos = [];
+                    var Chermuertos = [];
+                    var Queenmuertos = [];
+
 
                     datos.forEach(function (pasajero, i) {
                         if (pasajero.Embarked == "S") {
@@ -56,9 +61,30 @@
                         }
                     });
 
+                    Southampton.forEach(function(muerto, i) {
+                      if (muerto.Survived == 0) {
+                        Southmuertos.push(muerto);
+                      }
+                    });
+
+                    Cherburgo.forEach(function(muerto, i) {
+                      if (muerto.Survived == 0) {
+                        Chermuertos.push(muerto);
+                      }
+                    });
+
+                    Queenstown.forEach(function(muerto, i) {
+                      if (muerto.Survived == 0) {
+                        Queenmuertos.push(muerto);
+                      }
+                    });
+
                     console.log(Southampton.length);
                     console.log(Cherburgo.length);
                     console.log(Queenstown.length);
+                    console.log(Southmuertos.length);
+                    console.log(Chermuertos.length);
+                    console.log(Queenmuertos.length);
 
                     var barcoicon = L.icon({
                        iconUrl: 'images/shipwreck.png',
@@ -75,12 +101,16 @@
                     }).addTo(miMapa);
 
                     var estilo = { color: "rgb(107, 146, 157)", weight: 1.5, fillColor: "rgb(207, 216, 220)", fillOpacity: 0.75 };
+                    var estilo2 = { color: "rgb(0,0,0)", weight: 1.5, fillColor: "rgb(0,0,0)", fillOpacity: 0.75 };
 
-                    L.circle([50.8965, -1.3968], Southampton.length * 220, estilo).addTo(miMapa).bindPopup("En Southampton embarcaron " + Southampton.length + " personas");
+                    L.circle([50.8965, -1.3968], Southampton.length * 250, estilo).addTo(miMapa).bindPopup("En Cherburgo embarcaron " + Southampton.length + " personas." + Southmuertos.length + " de estas murieron.");
+                    L.circle([50.8965, -1.3968], Southmuertos.length * 250, estilo2).addTo(miMapa).bindPopup("En Cherburgo embarcaron " + Southampton.length + " personas." + Southmuertos.length + " de estas murieron.");
 
-                    L.circle([49.659072, -1.611729], Cherburgo.length * 220, estilo).addTo(miMapa).bindPopup("En Cherburgo embarcaron " + Cherburgo.length + " personas");
+                    L.circle([49.659072, -1.611729], Cherburgo.length * 250, estilo).addTo(miMapa).bindPopup("En Cherburgo embarcaron " + Cherburgo.length + " personas." + Chermuertos.length + " de estas murieron.");
+                    L.circle([49.659072, -1.611729], Chermuertos.length * 250, estilo2).addTo(miMapa).bindPopup("En Cherburgo embarcaron " + Cherburgo.length + " personas." + Chermuertos.length + " de estas murieron.");
 
-                    L.circle([51.851, -8.2967], Queenstown.length * 220, estilo).addTo(miMapa).bindPopup("En Queenstown embarcaron " + Queenstown.length + " personas");
+                    L.circle([51.851, -8.2967], Queenstown.length * 250, estilo).addTo(miMapa).bindPopup("En Cherburgo embarcaron " + Queenstown.length + " personas." + Queenmuertos.length + " de estas murieron.");
+                    L.circle([51.851, -8.2967], Queenmuertos.length * 250, estilo2).addTo(miMapa).bindPopup("En Cherburgo embarcaron " + Queenstown.length + " personas." + Queenmuertos.length + " de estas murieron.");
 
                     L.marker([41.731944, -49.945833], {icon: barcoicon}).addTo(miMapa).bindPopup("Lugar donde se hundió el Titanic");
 
