--- a/page-2.html
+++ b/page-2.html
@@ -103,14 +103,14 @@
                     var estilo = { color: "rgb(107, 146, 157)", weight: 1.5, fillColor: "rgb(207, 216, 220)", fillOpacity: 0.75 };
                     var estilo2 = { color: "rgb(0,0,0)", weight: 1.5, fillColor: "rgb(0,0,0)", fillOpacity: 0.75 };
 
-                    L.circle([50.8965, -1.3968], Southampton.length * 250, estilo).addTo(miMapa).bindPopup("En Cherburgo embarcaron " + Southampton.length + " personas." + Southmuertos.length + " de estas murieron.");
-                    L.circle([50.8965, -1.3968], Southmuertos.length * 250, estilo2).addTo(miMapa).bindPopup("En Cherburgo embarcaron " + Southampton.length + " personas." + Southmuertos.length + " de estas murieron.");
+                    L.circle([50.8965, -1.3968], Southampton.length * 250, estilo).addTo(miMapa).bindPopup("En Southampton embarcaron " + Southampton.length + " personas." + Southmuertos.length + " de estas murieron.");
+                    L.circle([50.8965, -1.3968], Southmuertos.length * 250, estilo2).addTo(miMapa).bindPopup("En Southampton embarcaron " + Southampton.length + " personas." + Southmuertos.length + " de estas murieron.");
 
                     L.circle([49.659072, -1.611729], Cherburgo.length * 250, estilo).addTo(miMapa).bindPopup("En Cherburgo embarcaron " + Cherburgo.length + " personas." + Chermuertos.length + " de estas murieron.");
                     L.circle([49.659072, -1.611729], Chermuertos.length * 250, estilo2).addTo(miMapa).bindPopup("En Cherburgo embarcaron " + Cherburgo.length + " personas." + Chermuertos.length + " de estas murieron.");
 
-                    L.circle([51.851, -8.2967], Queenstown.length * 250, estilo).addTo(miMapa).bindPopup("En Cherburgo embarcaron " + Queenstown.length + " personas." + Queenmuertos.length + " de estas murieron.");
-                    L.circle([51.851, -8.2967], Queenmuertos.length * 250, estilo2).addTo(miMapa).bindPopup("En Cherburgo embarcaron " + Queenstown.length + " personas." + Queenmuertos.length + " de estas murieron.");
+                    L.circle([51.851, -8.2967], Queenstown.length * 250, estilo).addTo(miMapa).bindPopup("En Queenstown embarcaron " + Queenstown.length + " personas." + Queenmuertos.length + " de estas murieron.");
+                    L.circle([51.851, -8.2967], Queenmuertos.length * 250, estilo2).addTo(miMapa).bindPopup("En Queenstown embarcaron " + Queenstown.length + " personas." + Queenmuertos.length + " de estas murieron.");
 
                     L.marker([41.731944, -49.945833], {icon: barcoicon}).addTo(miMapa).bindPopup("Lugar donde se hundió el Titanic");
 
